// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with id passed to it 1`] = `
<div
  className="surveyjs"
>
  <div
    className="sv_main sv_default_css"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="sv_custom_header"
      />
      <div
        className="sv_container"
      >
        <div
          className="sv_header"
        >
          <h3>
            <span
              style={null}
            >
              Engineering Out-Of-Class Activity Survey
            </span>
          </h3>
          <h5>
            <span
              style={null}
            >
              
            </span>
          </h5>
        </div>
        <div
          className="sv_body"
          id="sp_100"
        >
          <div
            className="sv_progress"
            style={Object {}}
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              className="sv_progress_bar"
              role="progressbar"
              style={
                Object {
                  "width": "17%",
                }
              }
            >
              <span
                className="undefined sv-hidden"
              >
                Page 1 of 6
              </span>
            </div>
            <span
              className="undefined undefined"
            >
              Page 1 of 6
            </span>
          </div>
          <div
            className="sv_p_root"
          >
            <h4
              className="sv_page_title"
            >
              <span
                style={null}
              >
                
              </span>
            </h4>
            <div
              className=""
            >
              <span
                style={null}
              >
                
              </span>
            </div>
            <div
              className="sv_row"
            >
              <div
                className="sv_p_container"
                style={
                  Object {
                    "width": "100.000000%",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "display": "block",
                      "paddingLeft": "",
                    }
                  }
                >
                  <div
                    className="sv_row"
                  >
                    <div
                      className="sv_q sv_qstn"
                      id="sq_100"
                      style={
                        Object {
                          "width": "100.000000%",
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <div
                          className=""
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<p>Study Title: Investigating Co-Curricular Participation of Students Underrepresented in Engineering</p>


<p>Researchers: Anh Chau</p>
<h4><u>Consent Information and Directions</u></h4><p>Do you participate in any activities? If so, I would like to know more about these activities. You are invited to participate in a research study that seeks to learn about students’ experiences from participating in various activities, called co/extracurricular activities, which occur outside of taking courses.</p><h4><u>Consent Information</u></h4><p>The information you provide will be used to help college and university administrators and faculty improve out of class experiences and students' ability to benefit from such experiences. It may also identify links between participation in out of class activities and commitment to engineering majors and careers.</p><p>It should take about 20 minutes to complete the survey. Persons who complete the survey will be entered into a drawing for ten (10) $25 Amazon gift cards. The odds of winning are 1 in 200.  To enter the drawing, please add your name and contact information at the end of the survey.  You are not required to enter the drawing.</p><p>There are no right or wrong answers. However, please choose your response options carefully. There are no known risks to study participants. Your responses will remain confidential. You are free to discontinue this survey at any time without  any consequences. You should be over 18 to be eligible to participate in this study. Completion of this online questionnaire will be considered as your consent to participate in this study and permission to use your data for the purposes of the study specified above.</p><p>Any questions concerning this study should be directed to Dr. Denise R. Simmons at densimm@vt.edu or (540) 553-6013. The Institutional Review Board (IRB) at Virginia Tech (VT) has approved this study. Should you have any questions or concerns about the study’s conduct or your rights as a research subject, or need to report a research-related injury or event, you may contact the VT IRB Chair, Dr. David M. Moore atmoored@vt.edu or (540) 231-4991.</p><h5><u>Directions:</u></h5><p>(1) You can use the back button to move Back and forth between pages.</p><p>(2) Hovering over words in <font color=\\"blue\\">blue ink</font> will display text, specifically examples of out-of-classroom activities and outcomes.</p><p><strong>(3) Clicking \\"agree\\" below indicates that:
</strong>
</p>
<p><b>- you voluntarily agree to participate</b></p>
<p><b>- you are at least 18 years of age</b></p>

<p><b>If you do not wish to participate in the study, please decline by clicking the \\"disagree\\" button. </b></p><p></p>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="sv_row"
                  >
                    <div
                      className="sv_q sv_qstn"
                      id="sq_101"
                      style={
                        Object {
                          "width": "100.000000%",
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <div
                          className=""
                        >
                          <div
                            className="sv_select_wrapper"
                          >
                            <select
                              aria-label="consentQuestion"
                              className="sv_q_dropdown_control"
                              id="sq_101i"
                              onChange={[Function]}
                              onInput={[Function]}
                              value=""
                            >
                              <option
                                value=""
                              >
                                Choose...
                              </option>
                              <option
                                disabled={false}
                                value="agree"
                              >
                                Agree
                              </option>
                              <option
                                disabled={false}
                                value="disagree"
                              >
                                Disagree
                              </option>
                            </select>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sv_nav"
          >
            <input
              className=" sv_next_btn"
              onClick={[Function]}
              onMouseDown={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                }
              }
              type="button"
              value="Next"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="ui hidden divider"
  />
  <div
    className="ui grid"
  >
    <div
      className="centered stretched row"
    >
      <button
        centered="true"
        className="ui black basic button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <i
          aria-hidden="true"
          className="home icon"
          onClick={[Function]}
        />
         Home
      </button>
    </div>
  </div>
  <div
    className="ui hidden divider"
  />
</div>
`;

exports[`renders correctly without id passed to it 1`] = `
<div
  className="surveyjs"
>
  <div
    className="sv_main sv_default_css"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="sv_custom_header"
      />
      <div
        className="sv_container"
      >
        <div
          className="sv_header"
        >
          <h3>
            <span
              style={null}
            >
              Engineering Out-Of-Class Activity Survey
            </span>
          </h3>
          <h5>
            <span
              style={null}
            >
              
            </span>
          </h5>
        </div>
        <div
          className="sv_body"
          id="sp_120"
        >
          <div
            className="sv_progress"
            style={Object {}}
          >
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              className="sv_progress_bar"
              role="progressbar"
              style={
                Object {
                  "width": "17%",
                }
              }
            >
              <span
                className="undefined sv-hidden"
              >
                Page 1 of 6
              </span>
            </div>
            <span
              className="undefined undefined"
            >
              Page 1 of 6
            </span>
          </div>
          <div
            className="sv_p_root"
          >
            <h4
              className="sv_page_title"
            >
              <span
                style={null}
              >
                
              </span>
            </h4>
            <div
              className=""
            >
              <span
                style={null}
              >
                
              </span>
            </div>
            <div
              className="sv_row"
            >
              <div
                className="sv_p_container"
                style={
                  Object {
                    "width": "100.000000%",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "display": "block",
                      "paddingLeft": "",
                    }
                  }
                >
                  <div
                    className="sv_row"
                  >
                    <div
                      className="sv_q sv_qstn"
                      id="sq_151"
                      style={
                        Object {
                          "width": "100.000000%",
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <div
                          className=""
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<p>Study Title: Investigating Co-Curricular Participation of Students Underrepresented in Engineering</p>


<p>Researchers: Anh Chau</p>
<h4><u>Consent Information and Directions</u></h4><p>Do you participate in any activities? If so, I would like to know more about these activities. You are invited to participate in a research study that seeks to learn about students’ experiences from participating in various activities, called co/extracurricular activities, which occur outside of taking courses.</p><h4><u>Consent Information</u></h4><p>The information you provide will be used to help college and university administrators and faculty improve out of class experiences and students' ability to benefit from such experiences. It may also identify links between participation in out of class activities and commitment to engineering majors and careers.</p><p>It should take about 20 minutes to complete the survey. Persons who complete the survey will be entered into a drawing for ten (10) $25 Amazon gift cards. The odds of winning are 1 in 200.  To enter the drawing, please add your name and contact information at the end of the survey.  You are not required to enter the drawing.</p><p>There are no right or wrong answers. However, please choose your response options carefully. There are no known risks to study participants. Your responses will remain confidential. You are free to discontinue this survey at any time without  any consequences. You should be over 18 to be eligible to participate in this study. Completion of this online questionnaire will be considered as your consent to participate in this study and permission to use your data for the purposes of the study specified above.</p><p>Any questions concerning this study should be directed to Dr. Denise R. Simmons at densimm@vt.edu or (540) 553-6013. The Institutional Review Board (IRB) at Virginia Tech (VT) has approved this study. Should you have any questions or concerns about the study’s conduct or your rights as a research subject, or need to report a research-related injury or event, you may contact the VT IRB Chair, Dr. David M. Moore atmoored@vt.edu or (540) 231-4991.</p><h5><u>Directions:</u></h5><p>(1) You can use the back button to move Back and forth between pages.</p><p>(2) Hovering over words in <font color=\\"blue\\">blue ink</font> will display text, specifically examples of out-of-classroom activities and outcomes.</p><p><strong>(3) Clicking \\"agree\\" below indicates that:
</strong>
</p>
<p><b>- you voluntarily agree to participate</b></p>
<p><b>- you are at least 18 years of age</b></p>

<p><b>If you do not wish to participate in the study, please decline by clicking the \\"disagree\\" button. </b></p><p></p>",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="sv_row"
                  >
                    <div
                      className="sv_q sv_qstn"
                      id="sq_152"
                      style={
                        Object {
                          "width": "100.000000%",
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <div
                          className=""
                        >
                          <div
                            className="sv_select_wrapper"
                          >
                            <select
                              aria-label="consentQuestion"
                              className="sv_q_dropdown_control"
                              id="sq_152i"
                              onChange={[Function]}
                              onInput={[Function]}
                              value=""
                            >
                              <option
                                value=""
                              >
                                Choose...
                              </option>
                              <option
                                disabled={false}
                                value="agree"
                              >
                                Agree
                              </option>
                              <option
                                disabled={false}
                                value="disagree"
                              >
                                Disagree
                              </option>
                            </select>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="sv_nav"
          >
            <input
              className=" sv_next_btn"
              onClick={[Function]}
              onMouseDown={[Function]}
              style={
                Object {
                  "marginRight": "5px",
                }
              }
              type="button"
              value="Next"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    className="ui hidden divider"
  />
  <div
    className="ui grid"
  >
    <div
      className="centered stretched row"
    >
      <button
        centered="true"
        className="ui black basic button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <i
          aria-hidden="true"
          className="home icon"
          onClick={[Function]}
        />
         Home
      </button>
    </div>
  </div>
  <div
    className="ui hidden divider"
  />
</div>
`;
